[gd_scene load_steps=2 format=3 uid="uid://ylgasqh0hv68"]

[ext_resource type="Script" path="res://old_experiments/MultiplayerTest/MultiplayerController.gd" id="1_3nro7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3nro7")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 400.0
offset_right = 600.0
offset_bottom = 460.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 610.0
offset_top = 400.0
offset_right = 810.0
offset_bottom = 460.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 820.0
offset_top = 400.0
offset_right = 1020.0
offset_bottom = 460.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 317.0
offset_right = 1005.0
offset_bottom = 348.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 404.0
offset_top = 323.0
offset_right = 455.0
offset_bottom = 349.0
text = "Name:"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
